# gpu-temp-monitor

./: meson.build
10_dbus_gpu/: meson.build
10_dbus_gpu/interfaceAdded_yaml_object_interface_gpu_temp_monitor/: main_server.cpp  meson.build
10_dbus_gpu/interfaceAdded_yaml_object_interface_gpu_temp_monitor/xyz/openbmc_project/: gpu_temp_monitor.interface.yaml
10_dbus_gpu/interfaceAdded_yaml_object_interface_gpu_temp_monitor/xyz/openbmc_project/gpu_temp_monitor/: meson.build
service_files/: meson.build  xyz.openbmc_project.gpu_temp_monitor.service
